[package]
name = "gh-archive-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
flate2 = "1.0"
chrono = "0.4"
futures = "0.3"

